@@ -4,6 +4,8 @@
 	bug id 190)
 	* rdata.c memory leaks on error and allocation checks fixed (patch
 	from Shane Kerr, bug id 188)
+	* zone.c memory leaks on error and allocation checks fixed (patch
+	from Shane Kerr, bug id 189)
 
 1.3
 	Base library:
